rsfg/tests/scripts/error/conditional-bool.sfg
fn main()
	if 5.0
		panic()

